adjust module for java 8